--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
 
     
 
