create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -109,11 +109,10 @@
                         <h4 class="card-title mbr-fonts-style display-7">
                             Comming Soon!</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Comming Soon!</p>
+                            Comming Soon!<br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="index.html#features3-5" class="btn btn-secondary display-4">
-                            Learn More
-                        </a></div>
+                            View Now</a></div>
                 </div>
             </div>
 
@@ -125,12 +124,11 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">Comming Soon!</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Comming Soon!
+                            Comming Soon!<br><br>
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="index.html#features3-5" class="btn btn-secondary display-4">
-                            Learn More
-                        </a></div>
+                            View Now</a></div>
                 </div>
             </div>
 
