create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -71,7 +71,7 @@
                     Simple Modding</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Our goal is to allow everyone to create and work on mods with-out past knowledge.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#features3-5">Learn More</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#features3-5">View Guides</a>
                     <a class="btn btn-md btn-primary display-4" href="page1.html#header9-9">Newest Guide</a></div>
             </div>
         </div>
