--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
 
     
 
@@ -170,6 +170,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Site is currently under construction. If you ever experience downtime, please wait. The site will be down at most 5 minutes">
   </body>
 </html>
