create github pages

--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section info1 cid-rY3ZW6BDFV" id="info1-l">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section info1 cid-rY3ZW6BDFV" id="info1-l">
 
     
 
@@ -109,7 +109,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                             Comming Soon!<br><br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-secondary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page3.html" class="btn btn-secondary display-4">
                             View Now</a></div>
                 </div>
             </div>
