create github pages

--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
 
     
 
@@ -81,7 +81,7 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
                     <li><strong>Download <a href="https://notepad-plus-plus.org/downloads/" target="_blank">Notepad++</a>&nbsp;And The <a href="https://mega.nz/file/1C40mIDZ#oWChZUxGl6WWQQtryRzbV1n2VOJPcBHUsNs_F5N97b0" target="_blank">DLC Pack Template</a>. You Will Also Need <a href="https://openiv.com/" target="_blank">OpenIV </a>And <a href="https://www.win-rar.com/start.html?&L=0" target="_blank">WinRar</a>.</strong></li>
-                    <li><strong>Follow The Video For Now, Written Guides Might Come Soon &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></li><li><strong>Other Links Mentioned In The Video, <a href="https://forums.gta5-mods.com/topic/14011/reference-vehicle-sound-guide" target="_blank">Vehicle Sound Guide</a>&nbsp;And <a href="https://www.gta5-mods.com/" target="_blank">gta5-mods.com</a></strong></li>
+                    <li><strong>Follow The Video For Now, Written Guides Might Come Soon &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</strong></li><li><strong>Other Links Mentioned In The Video, <a href="https://forums.gta5-mods.com/topic/14011/reference-vehicle-sound-guide" target="_blank">Vehicle Sound Guide</a>, <a href="https://forums.gta5-mods.com/topic/3850/tutorial-vehicles-meta/2" target="_blank">Vehicle Classes</a>,&nbsp;<a href="https://www.gta5-mods.com/misc/gta-5-gameconfig-300-cars#comments_tab" target="_blank">Game Config [REINSTALL AFTER EVERY UPDATE]</a>, <a href="https://www.gta5-mods.com/tools/heap-limit-adjuster-600-mb-of-heap" target="_blank">Heap Limit Adjuster</a>, <a href="https://www.gta5-mods.com/tools/packfile-limit-adjuster" target="_blank">Packfile Limit Adjuster</a>, And <a href="https://www.gta5-mods.com/" target="_blank">gta5-mods.com</a></strong></li>
                 </ol>
             </div>
         </div>
