--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
   <meta name="description" content="A guided discussing how to create Addon DLC Packs For GTA V">
   
   
-  <title>Creating Addon DLC Packs For GTA V</title>
+  <title>Simple Modding - Creating Addon DLC Packs For GTA V</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -46,7 +46,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
