create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -71,7 +71,7 @@
                     Simple Modding</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Our goal is to allow everyone to create and work on mods with-out past knowledge.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#features3-5">View Guides</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#features3-5">Featured Guides</a>
                     <a class="btn btn-md btn-primary display-4" href="page1.html#header9-9">Newest Guide</a></div>
             </div>
         </div>
@@ -204,6 +204,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Site is currently under construction. If you ever experience downtime, please wait. The site will be down at most 5 minutes">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="UPDATE - Live updates have started, site changes will happen while you are on it with out even refreshing">
   </body>
 </html>
