--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section info1 cid-rY3ZW6BDFV" id="info1-l">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section info1 cid-rY3ZW6BDFV" id="info1-l">
 
     
 
@@ -269,6 +269,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Site is currently under construction. If you ever experience downtime, please wait. The site will be down at most 5 minutes">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="UPDATE - Live updates have started, site changes will happen while you are on it with out even refreshing">
   </body>
 </html>
