--- a/page1.html
+++ b/page1.html
@@ -46,7 +46,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
@@ -56,6 +56,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Site is currently under construction. If you ever experience downtime, please wait. The site will be down at most 5 minutes">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="UPDATE - Live updates have started, site changes will happen while you are on it with out even refreshing">
   </body>
 </html>
