--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
 
     
 
@@ -170,6 +170,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Site is currently under construction. If you ever experience downtime, please wait. The site will be down at most 5 minutes">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Hide' data-cookie-colorButton='#149dcc' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="UPDATE - Live updates have started, site changes will happen while you are on it with out even refreshing">
   </body>
 </html>
