create github pages

--- a/page2.html
+++ b/page2.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -121,7 +121,7 @@
     </div>
 </section>
 
-<section class="cid-rY5KkZpM9v" id="social-buttons1-u">
+<section class="cid-rY5L8Tp5mx" id="social-buttons3-v">
     
     
 
@@ -131,21 +131,27 @@
         <div class="media-container-row">
             <div class="col-md-8 align-center">
                 <h2 class="pb-3 mbr-section-title mbr-fonts-style display-2">
-                    SHARE THIS PAGE!
+                    Share This Page!
                 </h2>
                 <div>
-                    <div class="mbr-social-likes" data-counters="false">
-                        <span class="btn btn-social facebook mx-2" title="Share link on Facebook">
+                    <div class="mbr-social-likes">
+                        <span class="btn btn-social socicon-bg-facebook facebook mx-2" title="Share link on Facebook">
                             <i class="socicon socicon-facebook"></i>
                         </span>
-                        <span class="btn btn-social twitter mx-2" title="Share link on Twitter">
+                        <span class="btn btn-social twitter socicon-bg-twitter mx-2" title="Share link on Twitter">
                             <i class="socicon socicon-twitter"></i>
                         </span>
-                        <span class="btn btn-social vkontakte mx-2" title="Share link on VKontakte">
+                        <span class="btn btn-social vkontakte socicon-bg-vkontakte mx-2" title="Share link on VKontakte">
                             <i class="socicon socicon-vkontakte"></i>
                         </span>
-                        <span class="btn btn-social odnoklassniki mx-2" title="Share link on Odnoklassniki">
+                        <span class="btn btn-social odnoklassniki socicon-bg-odnoklassniki mx-2" title="Share link on Odnoklassniki">
                             <i class="socicon socicon-odnoklassniki"></i>
+                        </span>
+                        <span class="btn btn-social pinterest socicon-bg-pinterest mx-2" title="Share link on Pinterest">
+                            <i class="socicon socicon-pinterest"></i>
+                        </span>
+                        <span class="btn btn-social mailru socicon-bg-mail mx-2" title="Share link on Mailru">
+                            <i class="socicon socicon-mail"></i>
                         </span>
                     </div>
                 </div>
