--- a/page2.html
+++ b/page2.html
@@ -121,7 +121,7 @@
     </div>
 </section>
 
-<section class="cid-rY5L8Tp5mx" id="social-buttons3-v">
+<section class="cid-rY5OztMv0t" id="social-buttons3-w">
     
     
 
@@ -131,7 +131,7 @@
         <div class="media-container-row">
             <div class="col-md-8 align-center">
                 <h2 class="pb-3 mbr-section-title mbr-fonts-style display-2">
-                    Share This Page!
+                    SHARE THIS PAGE!
                 </h2>
                 <div>
                     <div class="mbr-social-likes">
