--- a/page2.html
+++ b/page2.html
@@ -154,6 +154,22 @@
     </div>
 </section>
 
+<section once="footers" class="cid-rY5VfNxtY0" id="footer6-x">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    Simple Modding</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
