--- a/page2.html
+++ b/page2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content4 cid-rY2yg4W1AA" id="content4-b">
 
     
 
@@ -165,12 +165,12 @@
             <div class="event-name align-left mbr-white ">
                 <h4 class="mbr-fonts-style display-5">New Video/Guide</h4>
             </div>
-            <div class="countdown align-center py-2" data-due-date="2018/01/01">
+            <div class="countdown align-center py-2" data-due-date="2020/5/13">
             </div>
-            <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="7"></div>
-            <div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="11"></div>
-            <div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="45"></div>
-            <div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="12"></div>
+            <div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
+            <div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
+            <div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
+            <div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
             
         </div>
 
