--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 	
 	
-	<div><div class="modal fade" id="updates" tabindex="-1" role="dialog" aria-labelledby="updatesLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="updatesLabel">Updates</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="updates_body">If you use chrome and the website appears broken, don't worry we are working to fix the problem. Have a great day!! --</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#updates").on("hidden.bs.modal", function () {    var html = $( "#updates_body" ).html();    $( "#updates_body" ).empty();    $( "#updates_body" ).append(html);  })});</script></div>
+	<div><div class="modal fade" id="updates" tabindex="-1" role="dialog" aria-labelledby="updatesLabel" aria-hidden="true">  <div class="modal-dialog modal-lg modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="updatesLabel">Updates</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="updates_body">If you use chrome and the website appears broken, don't worry we are working to fix the problem. Have a great day!! - From Use At Simple Modding</div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Close</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#updates").on("hidden.bs.modal", function () {    var html = $( "#updates_body" ).html();    $( "#updates_body" ).empty();    $( "#updates_body" ).append(html);  })});</script></div>
 
 	<script>
 	if (typeof OpenModal === 'undefined') {
@@ -143,7 +143,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <section class="mbr-section mbr-section--no-padding" id="witsec-custom-html-block-13" custom-code="true" data-rv-view="37">
  
- <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
+ <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
     <div class="mbr-section__container block" style="width: 100%;">  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-grid.min.css">
