--- a/page2.html
+++ b/page2.html
@@ -121,14 +121,6 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--no-padding" id="witsec-custom-html-block-17" custom-code="true" data-rv-view="150">
- 
- <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
-    <div class="mbr-section__container block" style="width: 100%;"><link rel="stylesheet" href="assets/theme/css/style.css"></div>
- </div>
-
-</section>
-
 <section class="cid-rY5OztMv0t" id="social-buttons3-w">
     
     
@@ -162,6 +154,24 @@
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-section mbr-section--no-padding" id="witsec-custom-html-block-1a" custom-code="true" data-rv-view="320">
+ 
+ <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
+    <div class="mbr-section__container block" style="width: 100%;">  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/facebook-plugin/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/gdpr-plugin/gdpr-styles.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/theme/css/style.css">
+  <link rel="preload" as="style" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css" type="text/css"></div>
+ </div>
+
 </section>
 
 <section class="cid-rY5Xq1pr69" id="footer1-10">
