--- a/page3.html
+++ b/page3.html
@@ -260,6 +260,24 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section--no-padding" id="witsec-custom-html-block-18" custom-code="true" data-rv-view="315">
+ 
+ <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
+    <div class="mbr-section__container block" style="width: 100%;">  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/facebook-plugin/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/web/assets/gdpr-plugin/gdpr-styles.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/theme/css/style.css">
+  <link rel="preload" as="style" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="https://raw.githubusercontent.com/Sniper67x/Sniper67x.github.io/master/assets/mobirise/css/mbr-additional.css" type="text/css"></div>
+ </div>
+
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
