--- a/whoops.html
+++ b/whoops.html
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="index.html#header2-1">Go Back Home</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="index.html#header2-1">Home</a></div>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pbvgtwGfsi4m35uRcpEt7nqPBSsQwlNv1+U3/y3hQTAs7ehILYKmC5YDyhKw3+yJT0x5GDfbOZdSwjKX8jM3ZySDrZFeOJIMO0C1VwcY7q+f6GvD1ZPAtq1iL27dF49T">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zst3Qj1t3WnadNU+wkkhsUZ4IEoJ97TtStK80cIDYTpVrZnvt7VAK1wZYOEML3ohBcPqr0oyRVj1sJ7QeXGFy+5q6hb0GiI1HkLeDpVhJU1ALsJRJEc0TbYj6IlFPAgD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for helping to improve our site!!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
