--- a/page1.html
+++ b/page1.html
@@ -28,6 +28,20 @@
 <section id='top-1'></section>
 
 
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165584933-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165584933-1');
+</script>
+<!-- /Analytics -->
+
+
   <section class="header9 cid-rY2xiZBkRu mbr-fullscreen" id="header9-9">
 
     
