create github pages

--- a/page3.html
+++ b/page3.html
@@ -31,7 +31,16 @@
 
 
 <!-- Analytics -->
-ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165584933-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165584933-1');
+</script>
+
 <!-- /Analytics -->
 
 
