--- a/whoops.html
+++ b/whoops.html
@@ -29,7 +29,16 @@
 
 
 <!-- Analytics -->
-ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165584933-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165584933-1');
+</script>
+
 <!-- /Analytics -->
 
 
@@ -80,7 +89,7 @@ ga('set', 'userId', 'USER_ID'); // Set the user ID using signed-in user_id.
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0cGa/EnMO455Y1/hFdDlQmJ/NL+ZgckAUoG5Rhg2cTVfugKRd1W1Ofe/4r+HuxtC8RL8ADD27LEswEH/A3vr6Ff+3dTMPr9zjV7V+O6WR+uQ++3/u+wj1nc+Vtm+CphR">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vWXsNNelNaCp1zCWQIDwYAJfVSJo0ExkW3NctPrc4RcRqeCS0T6DwIXCAupWAg8fEwFMl99OxMceaFju8+xmzOCgNSpElOl/F2CkzZFayTEGOZZGdgr7to+YgKeAnZkb">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for helping to improve our site!!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
