create github pages

--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
                 In This Guide We Will,</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">Discuss how to turn regular replace cars into addon DLC packs. We recommend you follow the YouTube video and download everything before getting started.<br></p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-secondary display-4" href="page2.html#content4-b">Follow the Guide</a>
-                <a class="btn btn-md btn-primary display-4" href="whoops.html">Watch The Video</a></div>
+                <a class="btn btn-md btn-primary display-4" href="https://youtu.be/ZEkW9nxmQeM" target="_blank">Watch The Video</a></div>
         </div>
     </div>
 
