--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/pfp-128x128.png" type="image/x-icon">
-  <meta name="description" content="Learn how to make addon DLC Packs for GTA 5. Modding Tutorial">
+  <meta name="description" content="Learn how to make addon DLC Packs for GTA 5. Modding Tutorial
+
+ GTA V - How To Create And Install Add-on Vehicles [Addon DLC]">
   
   
   <title>Simple Modding - Addon DLC Guide</title>
@@ -129,7 +131,7 @@
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
                 <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://discordapp.com/invite/PXubxFd">Discord For Help</a>
-                    <a class="btn btn-primary display-4" href="whoops.html">Watch The Video</a></div>
+                    <a class="btn btn-primary display-4" href="https://youtu.be/ZEkW9nxmQeM">Watch The Video</a></div>
             </div>
         </div>
     </div>
