create github pages

--- a/page2.html
+++ b/page2.html
@@ -131,7 +131,7 @@
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
                 <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://discordapp.com/invite/PXubxFd">Discord For Help</a>
-                    <a class="btn btn-primary display-4" href="https://youtu.be/ZEkW9nxmQeM">Watch The Video</a></div>
+                    <a class="btn btn-primary display-4" href="https://youtu.be/ZEkW9nxmQeM" target="_blank">Watch The Video</a></div>
             </div>
         </div>
     </div>
